# research

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  git_backup.py  git_backup_utility.py  pyproject.toml  run_all_phases.ps1  run_all_phases.sh  run_reproduction_full.ps1  run_reproduction_full.sh  run_reproduction_phases.ps1  run_reproduction_phases.sh  show_backups.py
.github/workflows/: ci.yml
configs/: README.md  model_catalog.toml
configs/benchmarks/: gsm8k.toml  hotpotqa.toml  strategyqa.toml
configs/budget_comm/: README.md
configs/comm_necessary/: README.md
configs/cue/: README.md
configs/experiments/: main-baselines.toml  qwen2.5-math-pilot100.toml  robustness.toml
configs/free_mad_lite/: README.md
configs/models/: dashscope-deepseek-r1-distill-qwen-7b.toml  dashscope-qwen2.5-7b-instruct.toml  dashscope-qwen2.5-math-7b-instruct.toml  zhipu-glm-4.6v-flash.toml
configs/multi_agent/: README.md
configs/rosters/: README.md
configs/selective_comm/: README.md
configs/shared/: README.md  model_catalog.toml
configs/sid_lite/: README.md
configs/single_agent/: README.md
configs/sparc/: README.md
datasets/: README.md
docs/: README.md  code_annotation_guidelines.md  cue_framework_guide.md  huggingface_archive_workflow.md  huggingface_operations.md  method_execution_principles.md  project_structure.md  run_report_pipeline.md  top_conference_execution_plan.md  top_conference_research_constraints.md
files/: 0518-大语言模型多智能体辩论机制的研究进展与前沿范式演进：从启发式架构到动态统计建模.md  2026-04-26_smoke20主线跑通报告.md  API基线实验操作手册.md  HotpotQA通信必要性_smoke20结果汇总.md  README.md  SID-lite_Free-MAD-lite_smoke20结果汇总.md  disagreement_annotation_schema.json  questions.md  多智能体_v3.md  方法流程_v1.md  方法流程_v2.md  方法流程_v3.md  论文实验.md
files/history/: 0514-多智能体辩论与交互式推理顶会论文研究报告.md  0514-大型语言模型中的多智能体辩论：理论基础、范式演进与顶会前沿进展.md  0518-2024-2026年顶会多智能体系统（MAS）前沿研究与范式演进深度分析报告.md  API基线实验操作手册.md  README.md  多智能体.md  方法流程_v2.md  研究方向深度分析报告.md  预算约束下的多智能体大模型推理：选择性通信与局部审计的深度综述与研究方案t.md
files/references/: README.md
local/: README.md
reports/: 2026-04-18-debate-vs-vote-controlled-smoke20-dashscope-qwen-turbo-1101-report.md  2026-04-18-vanilla-mad-clean-smoke-report.md  2026-04-18-vanilla-mad-clean-smoke-smoke20-dashscope-qwen2.5-14b-instruct-report.md  2026-04-24-DALA-lite_smoke20结果汇总.md  README.md
reports/budget_comm/: 2026-04-24-dala_lite_same_context_v1-smoke20-dashscope-qwen-turbo-1101-report.md  2026-04-24-dala_lite_split_context_v1-smoke20-dashscope-qwen-turbo-1101-report.md  (+14 more)
src/: README.md
tests/: README.md  conftest.py  test_artifact_cleanup.py  test_budget_comm_logic.py  test_cli_smoke.py  test_comm_necessary_logic.py  test_cue_logic.py  test_experiment_core.py  test_extended_benchmarks.py  test_faithful_acceptance.py  test_faithful_analysis.py  test_free_mad_lite_logic.py  test_import_boundaries.py  test_prompt_contracts.py  test_run_contracts.py  test_sid_lite_logic.py  test_single_agent_prompting.py  test_smoke20_matrix.py  test_sparc_logic.py
(+1093 files in other folders)
