[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-experiments"
version = "0.1.0"
description = "Shared-core research experiments for single-agent, multi-agent, and selective communication studies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "pyarrow>=18.0.0,<22.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
single-agent-cli = "single_agent_baselines.cli:main"
mad-cli = "multi_agent_baselines.cli:main"
selective-cli = "selective_comm.cli:main"
sparc-cli = "sparc.cli:main"
budget-cli = "budget_comm.cli:main"
sid-lite-cli = "sid_lite.cli:main"
free-mad-lite-cli = "free_mad_lite.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
