[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-experiments"
version = "0.1.0"
description = "Shared-core research experiments for single-agent, multi-agent, and selective communication studies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "pyarrow>=18.0.0,<22.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
single_agent_cli = "single_agent.cli:main"
multi_agent_cli = "multi_agent.cli:main"
selective_comm_cli = "selective_comm.cli:main"
sparc_cli = "sparc.cli:main"
budget_comm_cli = "budget_comm.cli:main"
sid_lite_cli = "sid_lite.cli:main"
free_mad_lite_cli = "free_mad_lite.cli:main"
comm_necessary_cli = "comm_necessary.cli:main"
cue_cli = "cue.cli:main"
cleanup_artifacts_cli = "experiment_core.artifact_cleanup:main"
faithful_matrix_cli = "experiment_core.faithful_matrix:main"
cache_inspector_cli = "experiment_core.cache_inspector:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
