[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-experiments"
version = "0.1.0"
description = "Shared-core research experiments for single-agent, multi-agent, and selective communication studies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub>=0.32.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pyarrow>=18.0.0,<22.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "zstandard>=0.23.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
research_cli = "research_experiments.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
